--- a/doc/dissertation/content/fct/limited_flux_bounds_explicit_euler.tex
+++ b/doc/dissertation/content/fct/limited_flux_bounds_explicit_euler.tex
@@ -8,7 +8,7 @@
      \limitedfluxbound_i^\pm \equiv \lumpedmassentry
        \frac{\solutionbound_i^\pm-\solutionletter_i^\timeindex}{\timestepsize}
      + \sumj \ssmatrixletter\ij^L \solutionletter_j^\timeindex
-     - \ssrhsletter_i^\timeindex.
+     - \ssrhsletter_i^\timeindex \eqp
    \end{equation}
 \end{theorem}
 
