dissertation work and diagrams

--- a/doc/dissertation/content/discretization/spatial_discretization_scalar.tex
+++ b/doc/dissertation/content/discretization/spatial_discretization_scalar.tex
@@ -30,7 +30,7 @@ with the elements of $\ssmatrix$ being the following:
   \velocity\cdot\nabla\testfunction_j(\x) +
   \reactioncoef(\x)\testfunction_j(\x)\right)\testfunction_i(\x) \dvolume \eqc
 \end{equation}
-where $\support\ij$ is the dual support of $\testfunction_i(\x)$ and
+where $\support\ij$ is the shared support of $\testfunction_i(\x)$ and
 $\testfunction_j(\x)$.
 If the flux function $\consfluxscalar$ is nonlinear, then the system is
 nonlinear, but it may be expressed in a quasilinear form:
