--- a/doc/dissertation/content/preliminaries/shallowwater.tex
+++ b/doc/dissertation/content/preliminaries/shallowwater.tex
@@ -83,4 +83,6 @@ addressing this area alone. For simplicity, problems in this work are
 chosen such that initial data never reaches the boundary
 or boundary conditions are implemented as natural conditions
 rather than using the method of characteristics.
+Appendix \ref{sec:boundary_conditions} gives some details on a selection
+of boundary conditions applicable to the shallow water equations.
 
