--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -160,7 +160,7 @@ $\ssres$           & steady-state residual vector\\
 $\entropyresidual_\cellindex$ & entropy residual for cell $\cellindex$\\
 $\RKnstages$       & number of stages for a Runge-Kutta scheme\\
 $\support_i$       & support of FEM test/basis function $i$\\
-$\support\ij$      & dual support of FEM test/basis functions $i$ and $j$\\
+$\support\ij$      & shared support of FEM test/basis functions $i$ and $j$\\
 $\conssource(\vectorsolution)$ & conservation law source function\\
 $\timevalue$       & time\\
 
