--- a/doc/dissertation/appendices.tex
+++ b/doc/dissertation/appendices.tex
@@ -14,12 +14,12 @@
 \label{sec:shallow_water_entropy_flux}}
   \input{content/appendices/appendix_shallow_water_entropy_flux}
 %------------------------------------------------------------------------------
-%\chapter{BOUNDARY CONDITIONS FOR THE SHALLOW WATER EQUATIONS
-%\label{sec:boundary_conditions}}
-%  \section{Characteristic Boundary Conditions for the Shallow Water Equations}
-%    \input{content/bc/characteristic}
-%  \section{Wall Boundary Conditions for the Shallow Water Equations}
-%    \input{content/bc/wall}
+\chapter{BOUNDARY CONDITIONS FOR THE SHALLOW WATER EQUATIONS
+\label{sec:boundary_conditions}}
+  \section{Characteristic Boundary Conditions for the Shallow Water Equations}
+    \input{content/bc/characteristic}
+  \section{Wall Boundary Conditions for the Shallow Water Equations}
+    \input{content/bc/wall}
 %------------------------------------------------------------------------------
 \chapter{DERIVATION OF THE MAX WAVE SPEED FOR THE SHALLOW WATER EQUATIONS
 \label{app:shallow_water_max_wave_speed}}
