--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -23,6 +23,8 @@
 \usepackage{subcaption}
 \usepackage{algpseudocode}
 \usepackage{algorithm}
+\usepackage{tikz}     % for tikz pictures
+\usetikzlibrary{calc} % for computing points in tikz pictures
 \usepackage[mathscr]{euscript} % for \mathscr{} in math mode
 \usepackage[hidelinks]{hyperref}
 
