--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -65,6 +65,13 @@
 \newcommand{\highordersolution}[1][]{
   \ifthenelse{\equal{#1}{}}{\solutionvector^H}{\solutionvector^{H,#1}}}
 
+% math
+\newcommand{\triangulation}{\mathcal{K}_h}
+\newcommand{\approximationspace}{\mathcal{U}_h}
+\newcommand{\approximationspaceinc}{\approximationspace^{\text{inc}}}
+\newcommand{\referenceelementmap}{\Phi}
+\newcommand{\qonespace}{\mathbb{Q}_1}
+
 % sets
 \newcommand{\faces}{\mathcal{F}}
 \newcommand{\quadraturepoints}{\mathcal{Q}}
